Fix unit test failure in Java9+